# Lycoris

./: .gitignore  Cargo.toml  README.md  index.html  main.ts  package-lock.json  package.json  style.css  styles.css  tsconfig.json
.github/workflows/: build.yml  deploy.yml
js/: main.ts
js/pkg/: lycoris_core.d.ts  lycoris_core.js  lycoris_core_bg.js  lycoris_core_bg.wasm  package.json
pkg/: lycoris.d.ts
rust/: Cargo.toml
rust/src/: lib.rs
src/: lib.rs  main.ts  worker.ts
www/: styles.css
www/js/: .gitkeep
www/pkg/: .gitkeep
