[package]
name = "lycoris"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
num-rational = { version = "0.4", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
