[package]
name = "lycoris-core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"  # 追加！
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
